--- a/decision-making-tool/src/components/options-list/option-item/option-item.module.css
+++ b/decision-making-tool/src/components/options-list/option-item/option-item.module.css
@@ -1,6 +1,8 @@
 .item {
   display: flex;
+  align-items: center;
   justify-content: center;
+
   width: 100%;
   max-width: 35rem;
 }
